refactor: 重构活动演示

--- a/docs/business/structure.mdx
+++ b/docs/business/structure.mdx
@@ -76,7 +76,7 @@ export const useDerived = (selectedTeam, advancedTeam) => {
 
   const voted = useMemo(() => selectedTeam !== Team.None, [selectedTeam])
   const advanced = useMemo(() => advancedTeam !== Team.None, [advancedTeam])
-  const isSelectedTeamAdvanced = useMemo(() => (selectedTeam === advancedTeam) && voted && advanced [selectedTeam, advancedTeam, voted, advanced])
+  const isSelectedTeamAdvanced = useMemo(() => (selectedTeam === advancedTeam) && voted && advanced, [selectedTeam, advancedTeam, voted, advanced])
 
   return {
     voted,
